feat: dashboard Apex

--- a/BlazorAuthentication/BlazorAuthentication.Client/Pages/CreateUser.razor
+++ b/BlazorAuthentication/BlazorAuthentication.Client/Pages/CreateUser.razor
@@ -100,7 +100,7 @@
                             </RadzenStack>
                         </RadzenColumn>
                     </RadzenRow>
-                    <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Center" Gap="1rem" Class="rz-mt-8 rz-mb-4">
+                    <RadzenStack Orientation="Radzen.Orientation.Horizontal" JustifyContent="JustifyContent.Center" Gap="1rem" Class="rz-mt-8 rz-mb-4">
                         <RadzenButton Shade="Shade.Darker" Size="ButtonSize.Large" ButtonStyle="ButtonStyle.Secondary" Icon="add_circle_outline" Style="border-radius: 10px;" Text="Criar Usuário" ButtonType="ButtonType.Submit" />
                         <RadzenButton ButtonStyle="ButtonStyle.Light" Variant="Variant.Flat" Size="ButtonSize.Large" Icon="cancel" Text="Cancelar" Style="border-radius: 10px;" Click="@Cancel" />
                     </RadzenStack>
