--- a/BlazorAuthentication/BlazorAuthentication/Components/Layout/NavMenu.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/Layout/NavMenu.razor
@@ -5,7 +5,7 @@
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
 
-        <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0">
+        <RadzenStack Orientation="Radzen.Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0">
             <RadzenImage Path="images/Logomobilize.png" Style="width: 150px; cursor: pointer;" />
         </RadzenStack>
     </div>
@@ -38,12 +38,17 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="dashboard">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dashboard
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dashboard Radzen
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="dashboardSyncfusion">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dashboard Syncfusion
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="dashboardApex">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dashboard Apex
             </NavLink>
         </div>
         
