--- a/BlazorAuthentication/BlazorAuthentication/Components/Layout/Navigation.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/Layout/Navigation.razor
@@ -8,7 +8,7 @@
             <ChildContent>
                 <div class="row justify-content-start align-items-center">
                     <div class="col-6 d-flex align-items-center">
-                        <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0">
+                        <RadzenStack Orientation="Radzen.Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0">
                             <RadzenSidebarToggle @rendermode="@RenderMode.InteractiveServer" Click="@(() => sidebar1Expanded = !sidebar1Expanded)" />
                             <RadzenImage Path="images/Mobilize.png" Style="width: 150px; cursor: pointer;" Click="(()=>NavigationHome())" />
                         </RadzenStack>
