--- a/BlazorAuthentication/BlazorAuthentication/Components/Layout/MainLayout.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/Layout/MainLayout.razor
@@ -15,7 +15,7 @@
 <div class="page">
     <AuthorizeView>
         <Authorized>
-            <div class="sidebar">
+            <div class="sidebar" style="width: 300px;">
                 <NavMenu />
             </div>
         </Authorized>
