--- a/BlazorAuthentication/BlazorAuthentication.Client/Pages/DashboardMudBlazor.razor
+++ b/BlazorAuthentication/BlazorAuthentication.Client/Pages/DashboardMudBlazor.razor
@@ -1,16 +1,18 @@
-﻿@page "/dashboard"
+﻿@page "/dashboardMudBlazor"
 @rendermode InteractiveAuto
 @inject IJSRuntime JSRuntime
 @using BlazorAuthentication.Client.Model
-@inject DialogService DialogService
+@using MudBlazor
+@using MudBlazor.Charts
+
 
 
 <div class="row mt-4">
     <div class="col-md-4 d-flex align-items-stretch">
-        <RadzenCard class="flex-fill" Style="padding: 20px;">
+        <MudPaper Class="flex-fill" Style="padding: 20px;">
             <div class="d-flex justify-content-between">
                 <h5>Performance</h5>
-                <RadzenIcon Icon="assessment" Style="font-size: 24px;cursor: pointer; display: inline-block;" @onclick="OnConformidades" />
+                <MudIconButton Icon="@Icons.Material.Filled.Assessment" Size="MudBlazor.Size.Medium" Style="font-size: 24px; cursor: pointer; display: inline-block;" />
             </div>
             <div class="mt-3">
                 <div class="row">
@@ -45,13 +47,13 @@
                     </div>
                 </div>
             </div>
-        </RadzenCard>
+        </MudPaper>
     </div>
     <div class="col-md-4 d-flex align-items-stretch">
-        <RadzenCard class="flex-fill" Style="padding: 20px;">
+        <MudPaper Class="flex-fill" Style="padding: 20px;">
             <div class="d-flex justify-content-between align-items-center">
                 <h5>Recebimentos</h5>
-                <RadzenIcon Icon="assessment" Style="font-size: 24px;cursor: pointer; display: inline-block;" @onclick="OnConformidades" />
+                <MudIconButton Icon="@Icons.Material.Filled.Assessment" Size="MudBlazor.Size.Medium" Style="font-size: 24px; cursor: pointer; display: inline-block;" />
             </div>
             <div class="mt-3">
                 <div class="row">
@@ -86,13 +88,13 @@
                     </div>
                 </div>
             </div>
-        </RadzenCard>
+        </MudPaper>
     </div>
     <div class="col-md-4 d-flex align-items-stretch">
-        <RadzenCard class="flex-fill" Style="padding: 20px;">
+         <MudPaper Class="flex-fill" Style="padding: 20px;">
             <div class="d-flex justify-content-between align-items-center">
                 <h5>Tempo de Trabalho</h5>
-                <RadzenIcon Icon="assessment" Style="font-size: 24px;cursor: pointer; display: inline-block;" @onclick="OnConformidades" />
+                <MudIconButton Icon="@Icons.Material.Filled.Assessment" Size="MudBlazor.Size.Medium" Style="font-size: 24px; cursor: pointer; display: inline-block;" />
             </div>
             <div class="mt-3">
                 <div class="row">
@@ -120,21 +122,19 @@
                     </div>
                 </div>
             </div>
-        </RadzenCard>
+        </MudPaper>
     </div>
 </div>
 
 <div class="row mt-4">
     <div class="col-md-4 d-flex align-items-stretch">
-        <RadzenCard class="flex-fill" Style="padding: 20px;">
+        <MudPaper Class="flex-fill" Style="padding: 20px;">
             <div class="d-flex justify-content-between align-items-center">
                 <h5>Painel de não conformidades</h5>
-                <RadzenIcon Icon="assessment" Style="font-size: 24px;cursor: pointer; display: inline-block;" @onclick="OnConformidades" />
+                <MudIconButton Icon="@Icons.Material.Filled.Assessment" Size="MudBlazor.Size.Medium" Style="font-size: 24px; cursor: pointer; display: inline-block;" />
             </div>
             <div class="mt-3">
-                <RadzenChart>
-                    <RadzenDonutSeries Data=@data CategoryProperty="Category" ValueProperty="Value" Fills=@labelColors />
-                </RadzenChart>
+                <MudChart ChartType="MudBlazor.ChartType.Donut" LegendPosition="Position.Right" Height="200px" InputData="@dataArray" InputLabels="@labelsArray" Options="options"></MudChart>
                 <div class="mt-3">
                     <div>Não Conformidades</div>
                     <div style="font-size: 24px; font-weight: bold;">21% <span>(151)</span> <span style="font-size: 14px; color: green;">▲1,200%</span></div>
@@ -144,24 +144,34 @@
                     <div><span style="color: green;">&#9679;</span> 65 - Não conformidade de contagem (ver operadores)</div>
                 </div>
             </div>
-        </RadzenCard>
+        </MudPaper>
     </div>
     <div class="col-md-8 d-flex flex-column">
-        <RadzenCard class="flex-fill mb-4" Style="padding: 20px;">
+          <MudPaper Class="flex-fill" Style="padding: 20px;">
             <h5>Operadores em Atividade</h5>
-            <RadzenDataGrid Data="@operators" TItem="Operator" Style="width: 100%;">
-                <Columns>
-                    <RadzenDataGridColumn TItem="Operator" Property="Name" Title="NOME" />
-                    <RadzenDataGridColumn TItem="Operator" Property="WorkHours" Title="H.TRAB" />
-                    <RadzenDataGridColumn TItem="Operator" Property="ConfHours" Title="H. EM CONF" />
-                    <RadzenDataGridColumn TItem="Operator" Property="PerfPallets" Title="PERF. PALLET" />
-                    <RadzenDataGridColumn TItem="Operator" Property="AvgPallets" Title="MEDIA" />
-                    <RadzenDataGridColumn TItem="Operator" Property="DailyAccuracy" Title="ACUR. DIA" />
-                    <RadzenDataGridColumn TItem="Operator" Property="Accuracy" Title="ACURACIA" />
-                </Columns>
-            </RadzenDataGrid>
-        </RadzenCard>
-        <RadzenCard class="flex-fill" Style="padding: 20px;">
+            <MudTable Items="@operators" Style="width: 100%;">
+                <HeaderContent>
+                    <MudTh>NOME</MudTh>
+                    <MudTh>H.TRAB</MudTh>
+                    <MudTh>H. EM CONF</MudTh>
+                    <MudTh>PERF. PALLET</MudTh>
+                    <MudTh>MEDIA</MudTh>
+                    <MudTh>ACUR. DIA</MudTh>
+                    <MudTh>ACURACIA</MudTh>
+                </HeaderContent>
+                <RowTemplate>
+                    <MudTd DataLabel="NOME">@context.Name</MudTd>
+                    <MudTd DataLabel="H.TRAB">@context.WorkHours</MudTd>
+                    <MudTd DataLabel="H. EM CONF">@context.ConfHours</MudTd>
+                    <MudTd DataLabel="PERF. PALLET">@context.PerfPallets</MudTd>
+                    <MudTd DataLabel="MEDIA">@context.AvgPallets</MudTd>
+                    <MudTd DataLabel="ACUR. DIA">@context.DailyAccuracy</MudTd>
+                    <MudTd DataLabel="ACURACIA">@context.Accuracy</MudTd>
+                </RowTemplate>
+            </MudTable>
+        </MudPaper>
+        <br/>
+       <MudPaper Class="flex-fill" Style="padding: 20px;">
             <h5>Não conformidades</h5>
             <div class="row mt-3">
                 <div class="col-md-4 border-end">
@@ -184,13 +194,13 @@
                     <div style="font-size: 24px; font-weight: bold;">908/919 <span style="font-size: 14px; color: red;">▼25%</span></div>
                 </div>
             </div>
-        </RadzenCard>
+            </MudPaper>
     </div>
 </div>
 
 <div class="row mt-4">
     <div class="col-md-3 d-flex align-items-stretch mb-4">
-        <RadzenCard class="flex-fill" Style="padding: 20px;">
+          <MudPaper Class="flex-fill" Style="padding: 20px;">
             <h5>Tipo de Unitização</h5>
             <div class="d-flex align-items-center mt-3">
                 <div style="color: #A64AC9;">&#9679;</div>
@@ -202,13 +212,11 @@
                 <div class="ms-2">Misto/Solto</div>
                 <div class="ms-auto" style="font-size: 24px; font-weight: bold;">11</div>
             </div>
-            <RadzenChart Style="height: 200px;">
-                <RadzenDonutSeries Data="@unitizationData" CategoryProperty="Category" ValueProperty="Value" Fills="@unitizationColors" />
-            </RadzenChart>
-        </RadzenCard>
+            <MudChart ChartType="MudBlazor.ChartType.Donut" LegendPosition="Position.Right" Height="200px" InputData="@unitizationDataValue" InputLabels="@unitizationDataCategory" Options="options"></MudChart>
+        </MudPaper>
     </div>
     <div class="col-md-3 d-flex align-items-stretch mb-4">
-        <RadzenCard class="flex-fill" Style="padding: 20px;">
+    <MudPaper Class="flex-fill" Style="padding: 20px;">
             <h5>Tipo de Paletização</h5>
             <div class="d-flex align-items-center mt-3">
                 <div style="color: #A64AC9;">&#9679;</div>
@@ -225,13 +233,11 @@
                 <div class="ms-2">Batido/Paletizado</div>
                 <div class="ms-auto" style="font-size: 24px; font-weight: bold;">14</div>
             </div>
-            <RadzenChart Style="height: 200px;">
-                <RadzenDonutSeries Data="@palletizationData" CategoryProperty="Category" ValueProperty="Value" Fills="@palletizationColors" />
-            </RadzenChart>
-        </RadzenCard>
+            <MudChart ChartType="MudBlazor.ChartType.Donut" LegendPosition="Position.Right" Height="200px" InputData="@palletizationDataValue" InputLabels="@palletizationDataCategory" Options="options"></MudChart>
+        </MudPaper>
     </div>
     <div class="col-md-6  align-items-stretch mb-4">
-        <RadzenCard class="flex-fill" Style="padding: 20px;">
+         <MudPaper Class="flex-fill" Style="padding: 20px;">
             <h5>Metas e Andamento</h5>
             <div class="row">
                 <div class="col-md-4">
@@ -247,23 +253,14 @@
                     <div style="font-size: 24px; font-weight: bold;">15/5</div>
                 </div>
             </div>
-            <RadzenChart Style="height: 300px;">
-                <RadzenCategoryAxis>
-
-                </RadzenCategoryAxis>
-                <RadzenValueAxis Min="0">
-
-                </RadzenValueAxis>
-                <RadzenColumnSeries Data=@metasData CategoryProperty="Category" Title="Meta" ValueProperty="Meta" Fill="orange" />
-                <RadzenColumnSeries Data=@metasData CategoryProperty="Category" Title="Andamento" ValueProperty="Andamento" Fill="blue" />
-                <RadzenColumnOptions Radius="5" />
-            </RadzenChart>
-        </RadzenCard>
+ 
+            <MudChart ChartType="MudBlazor.ChartType.Bar" ChartSeries="@Series" Height="300px"></MudChart>
+        </MudPaper>
     </div>
 </div>
 
 @code {
-    private List<ChartData> data;
+    private List<ChartData> data = new List<ChartData>();
     private List<string> labelColors;
     private List<Operator> operators;
     private List<ChartData> unitizationData;
@@ -273,9 +270,20 @@
     private List<MetasData> metasData;
     private List<Conformidades> conformidades;
 
-    private DotNetObjectReference<DashboardGerais> _objRef;
-    private bool _isDisposed;
+    public List<double> dataMud;
+    private string[] labelsArray;
+    private double[] dataArray;
 
+    private string[] unitizationDataCategory;
+    private double[] unitizationDataValue;
+
+    private string[] palletizationDataCategory;
+    private double[] palletizationDataValue;
+
+
+    private int Index = -1;
+    public List<ChartSeries> Series;
+    public string[] XAxisLabels = { "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep" };
     protected override void OnInitialized()
     {
         data = new List<ChartData>
@@ -284,6 +292,8 @@
         new ChartData { Category = "Não conformidade de contagem", Value = 65 }
     };
 
+        labelsArray = data.Select(x => x.Category).ToArray();
+        dataArray = data.Select(x => x.Value).ToArray();
         labelColors = new List<string>
     {
         "blue",
@@ -303,12 +313,17 @@
         new ChartData { Category = "Misto/Solto", Value = 11 }
     };
 
+        unitizationDataCategory = data.Select(x => x.Category).ToArray();
+        unitizationDataValue = data.Select(x => x.Value).ToArray();
+
         palletizationData = new List<ChartData>
     {
         new ChartData { Category = "Batido", Value = 7 },
         new ChartData { Category = "Paletizada", Value = 13 },
         new ChartData { Category = "Batido/Paletizado", Value = 14 }
     };
+        palletizationDataCategory = data.Select(x => x.Category).ToArray();
+        palletizationDataValue = data.Select(x => x.Value).ToArray();
 
         unitizationColors = new List<string>
     {
@@ -339,17 +354,18 @@
           new Conformidades { Day = "14/03", Fornecedor = 10, Contagem = 5 },
           new Conformidades { Day = "15/03", Fornecedor = 4, Contagem = 29 },
     };
-
-        _objRef = DotNetObjectReference.Create(this);
-        JSRuntime.InvokeVoidAsync("registerDotNetObject", _objRef);
-
+        Series = new List<ChartSeries>
+{
+    new ChartSeries() { Name = "Fornecedor", Data = conformidades.Select(c => (double)c.Fornecedor).ToArray() },
+    new ChartSeries() { Name = "Contagem", Data = conformidades.Select(c => (double)c.Contagem).ToArray() },
+};
     }
 
 
     public class ChartData
     {
         public string Category { get; set; }
-        public int Value { get; set; }
+        public double Value { get; set; }
     }
 
     public class Operator
@@ -371,78 +387,26 @@
         public int Andamento { get; set; }
     }
 
-    private string selectedDeposito;
-    private List<string> depositos = new List<string> { "Todos os depósitos", "Depósito 1", "Depósito 2", "Depósito 3" };
 
-    private void FilterByType(string type)
-    {
-        // Add your filter logic here
-    }
 
-    private void FilterByCategory(string category)
-    {
-        // Add your filter logic here
-    }
 
-    private void FilterByDate(string dateRange)
-    {
-        // Add your filter logic here
-    }
+    // public async Task OnConformidades()
+    // {
+    //     var parameter = new Dictionary<string, object>() {
+    //             { "conformidades", conformidades } };
 
-    public async Task OnConformidades()
-    {
-        var parameter = new Dictionary<string, object>() {
-                { "conformidades", conformidades } };
+    //     var dialogResult = await DialogService.OpenAsync<DashboardModal>("Painel de Não Conformidades", parameter,
+    //                                                new DialogOptions()
+    //                                                    {
+    //                                                        Width = ModalState.Medium,
+    //                                                        CloseDialogOnEsc = ModalState.CloseDialogOnEsc,
+    //                                                        Draggable = ModalState.Draggable,
+    //                                                        Resizable = ModalState.Resizable,
+    //                                                        Height = "53%",
+    //                                                        ShowClose = ModalState.ShowClose
+    //                                                    });
 
-        var dialogResult = await DialogService.OpenAsync<DashboardModal>("Painel de Não Conformidades", parameter,
-                                                   new DialogOptions()
-                                                       {
-                                                           Width = ModalState.Medium,
-                                                           CloseDialogOnEsc = ModalState.CloseDialogOnEsc,
-                                                           Draggable = ModalState.Draggable,
-                                                           Resizable = ModalState.Resizable,
-                                                           Height = "53%",
-                                                           ShowClose = ModalState.ShowClose
+    // }
 
-                                                       });
 
-    }
-
-    public async ValueTask DisposeAsync()
-    {
-        if (!_isDisposed)
-        {
-            if (_objRef != null)
-            {
-                await JSRuntime.InvokeVoidAsync("unregisterDotNetObject", _objRef);
-                _objRef.Dispose();
-            }
-
-            _isDisposed = true;
-        }
-    }
-
-    ~DashboardGerais()
-    {
-        Dispose(false);
-    }
-
-    protected virtual void Dispose(bool disposing)
-    {
-        if (!_isDisposed)
-        {
-            if (disposing)
-            {
-                // liberar recursos gerenciados
-            }
-
-            // liberar recursos não gerenciados
-            if (_objRef != null)
-            {
-                _objRef.Dispose();
-            }
-
-            _isDisposed = true;
-        }
-    }
 }
