--- a/BlazorAuthentication/BlazorAuthentication/Components/Layout/NavMenu.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/Layout/NavMenu.razor
@@ -3,17 +3,14 @@
 
 
 <div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-
-        <RadzenStack Orientation="Radzen.Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0">
-            <RadzenImage Path="images/Logomobilize.png" Style="width: 150px; cursor: pointer;" />
-        </RadzenStack>
+    <div class="container-fluid d-flex justify-content-center align-items-center">
+        <RadzenImage Path="images/Logomobilize.png" Style="width: 150px; cursor: pointer;" />
     </div>
 </div>
 
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()" style="width: 300px;">
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
@@ -36,25 +33,27 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="dashboard">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dashboard Radzen
-            </NavLink>
-        </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="dashboardSyncfusion">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dashboard Syncfusion
+                <span class="bi bi-clipboard-data" style="position: relative; top: -13px;" aria-hidden="true"></span> Dashboard Syncfusion
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="dashboardApex">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dashboard Apex
+                <span class="bi bi-clipboard-data" style="position: relative; top: -13px;" aria-hidden="true"></span> Dashboard Apex
             </NavLink>
         </div>
-        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="dashboardMudBlazor">
+                <span class="bi bi-clipboard-data" style="position: relative; top: -13px;" aria-hidden="true"></span> Dashboard MudBlazor
+            </NavLink>
+        </div>
+
+
         <div class="nav-item px-3">
             <NavLink class="nav-link d-flex align-items-center justify-content-between" @onclick="ToggleSubNav">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>
+                <span class="bi bi-people-fill" style="position: relative; top: -13px;" aria-hidden="true"></span>
                 <span>Usuarios</span>
                 <span class="bi @(expandSubNav ? "bi-caret-down-fill" : "bi-caret-right-fill")" aria-hidden="true" style="position: relative; top: -13px;"></span>
             </NavLink>
@@ -82,6 +81,36 @@
                         <span aria-hidden="true">user SF</span>
                     </NavLink>
                 </div>
+
+            }
+        </div>
+
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link d-flex align-items-center justify-content-between" @onclick="ToggleSubNavDash">
+                <span class="bi bi-clipboard-data-fill" style="position: relative; top: -13px;" aria-hidden="true"></span>
+                <span>Conferência de Entrada</span>
+                <span class="bi @(expandSubNavDash ? "bi-caret-down-fill" : "bi-caret-right-fill")" aria-hidden="true" style="position: relative; top: -13px;"></span>
+            </NavLink>
+
+
+            @if (expandSubNavDash)
+            {
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="dashboard">
+                        <span aria-hidden="true">Estatisticas Gerais</span>
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="dashboardOperadoresAtivos">
+                        <span aria-hidden="true">Operadores / Ativos</span>
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="dashboardSku">
+                        <span aria-hidden="true">SKU / Tipos de Cargas</span>
+                    </NavLink>
+                </div>
                 
             }
         </div>
@@ -91,10 +120,18 @@
 
 @code {
     private bool expandSubNav;
-    private string icone;
+
+
+    private bool expandSubNavDash;
+
 
     private void ToggleSubNav()
     {
         expandSubNav = !expandSubNav;
+    }
+
+    private void ToggleSubNavDash()
+    {
+        expandSubNavDash = !expandSubNavDash;
     }
 }
